style.css
/* hero */

body {
  overflow-x: hidden;
}

.hero {

  width: 100vw;
  height: 100vh;

  background-image: url('images/muerta.jpg');
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;

  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;

}

.hero-text {
  color: gray;
  font-size: 20vw;
  font-family: "garamond", serif;

}

.credit {
  text-align: right;
}

.credit_also {
  display: inline-block;
}

.credit2 {
  font-family: "Roboto";
  font-size: 12px;
  letter-spacing: 2px;
  color: gray;
}

#main2 {
  background-color: black;
  width: 100vw
}

#author {
  text-align: center;
}

.byauthor {
  display: inline-block;
  padding-top: 50px;
  padding-bottom: 50px;
}

.byline {
  font-size: 20px;
  font-family: "Roboto";
  letter-spacing: 3px;
}

.indent {
  padding-left: 20px;
  padding-right: 20px;
}

h1 {
  color: gray;
  font-family: "Roboto";
  font-size: 3em;
}

#story {
  padding-bottom: 50px;
}

.bodytext {
  color: white;
  font-size: 18px;
  font-family: "Roboto";
  letter-spacing: .7px
}

.pic {
  margin-top: 40px;
}

.space {
  margin-bottom: 70px;
}

.bio {
  background-color:gray;
  padding-top: 50px;
  padding-bottom: 50px;
  color: #262626;
}

a {
  font-weight: bold;
  color: #262626;
}

a:hover {
  color: #262626;
  text-decoration: underline;
}

